funcionalidad para el registro de un empleado