@@ -3,13 +3,15 @@ package com.isai.demosistemacitasillaya.app.controllers.admin;
 import com.isai.demosistemacitasillaya.app.models.Empleado;
 import com.isai.demosistemacitasillaya.app.models.emuns.EstadoEmpleado;
 import com.isai.demosistemacitasillaya.app.services.impl.EmpleadoServiceImpl;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Controller
@@ -43,8 +45,32 @@ public class AdminEmpleadoController {
         }
 
         //agremos cargos a la vista
-        model.addAttribute("cargos", List.of("Contadora", "Secretaria", "Administrador"));
+        model.addAttribute("cargos", Arrays.asList("Manager", "DJ Oficial", "Hype Man", "Ingeniero de Sonido", "Asistente de Gira", "Merchandising"));
         model.addAttribute("estadosEmpleado", EstadoEmpleado.values());
         return "admin/empleados/create";
+    }
+
+    @PostMapping("/registrar")
+    public String registrarEmpleado(@Valid @ModelAttribute("empleado") Empleado empleado,
+                                    BindingResult result,
+                                    RedirectAttributes redirectAttributes,
+                                    Model model) {
+        if (result.hasErrors()) {
+            model.addAttribute("estadosEmpleado", EstadoEmpleado.values());
+            model.addAttribute("cargos", Arrays.asList("Manager", "DJ Oficial", "Hype Man", "Ingeniero de Sonido", "Asistente de Gira", "Merchandising"));
+            model.addAttribute("errorMessage", "Por favor, corrige los errores en el formulario.");
+            return "admin/empleados/create";
+        }
+
+        try {
+            empleadoService.saveEmpleado(empleado);
+            redirectAttributes.addFlashAttribute("successMessage", "Empleado registrado exitosamente!");
+            return "redirect:/admin/empleados";
+        } catch (Exception e) {
+            model.addAttribute("errorMessage", "Error al registrar el empleado: " + e.getMessage());
+            model.addAttribute("estadosEmpleado", EstadoEmpleado.values());
+            model.addAttribute("cargos", Arrays.asList("Manager", "DJ Oficial", "Hype Man", "Ingeniero de Sonido", "Asistente de Gira", "Merchandising"));
+            return "admin/empleados/create";
+        }
     }
 }
